--- a/3dhop-minimal/3DHOP_all_tools.html
+++ b/3dhop-minimal/3DHOP_all_tools.html
@@ -58,6 +58,9 @@
   <img id="perspective"  title="Perspective Camera"    src="skins/dark/perspective.png" style="position:absolute; visibility:hidden;"/>
   <img id="orthographic" title="Orthographic Camera"   src="skins/dark/orthographic.png"/><br/>
 <!--CAMERA-->
+<!--SCREENSHOT-->
+  <img id="screenshot" title="Save Screenshot"   src="skins/dark/screenshot.png"/><br/>
+<!--SCREENSHOT-->
 <!--FULLSCREEN-->
   <img id="full_on"     title="Exit Full Screen"       src="skins/dark/full_on.png" style="position:absolute; visibility:hidden;"/>
   <img id="full"        title="Full Screen"            src="skins/dark/full.png"/>
@@ -171,6 +174,9 @@ function actionsToolbar(action) {
 //--POINT PICKING--
 	else if(action=='pick' || action=='pick_on') { presenter.enablePickpointMode(!presenter.isPickpointModeEnabled()); pickpointSwitch(); }
 //--POINT PICKING--
+//--SCREENSHOT--
+	else if(action=='screenshot') presenter.saveScreenshot();
+//--SCREENSHOT--
 //--SECTIONS--
 	else if(action=='sections' || action=='sections_on') { sectiontoolReset(); sectiontoolSwitch(); }
 //--SECTIONS--
